# clearCore

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPPLINT.cfg  LICENSE  README.md  SECURITY.md  codecov.yml  convert.hpp  main.cpp
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  custom.md  feature_request.yml
.github/workflows/: appimage.yml  cflite_batch.yml  cflite_cov.yml  cflite_pr.yml  cflite_prune.yml  ci.yml  codeql.yml  cross-platform.yml  dependency-review.yml  gitleaks.yml  release-drafter.yml  release-pr.yml  release.yml  scorecard.yml  update-changelog.yml  wiki-sync.yml  zizmor.yml
docs/: ARCHITECTURE_DESIGN.md  CONTRIBUTING.md  USER_GUIDE.md
include/isa/: memory.h  processor.h  registers.h
include/mips/: alu.h  cp0.h  cpu.h  decoder.h  disassembler.h  elf_loader.h  gdb_stub.h  memory.h  nyxstone_backend.h  pipeline_regs.h  pipelined_cpu.h  processor.h  program_loader.h  registers.h  single_cycle_cpu.h  trace.h
include/nsc/: converter.h  format.h  parse.h  ui.h
include/nsc_qt/: assembler.h  dock_panels.h  examples.h  instr_format.h  main_window.h  preferences_dialog.h  simulator_controller.h  ui_scale.h
include/nsc_qt/widgets/: code_editor.h  datapath_widget.h  memory_widget.h  pipeline_events_widget.h  pipeline_trace_widget.h  register_widget.h  schematic_datapath_widget.h
include/nsc_quick/: quick_simulator.h
packaging/: clearCore.desktop
paper/: paper.bib  paper.md
qml/ClearCore/: CCButton.qml  DatapathStrip.qml  EditorPane.qml  HazardBadge.qml  Main.qml  MemoryPane.qml  RegistersPane.qml  StageCard.qml  StatsPane.qml  StatusPill.qml  Theme.qml  TracePane.qml  TransportBar.qml
src/mips/: alu.cpp  cp0.cpp  decoder.cpp  disassembler.cpp  elf_loader.cpp  gdb_stub.cpp  memory.cpp  nyxstone_backend.cpp  pipelined_cpu.cpp  program_loader.cpp  registers.cpp  single_cycle_cpu.cpp  trace.cpp
src/nsc/: converter.cpp  format.cpp  parse.cpp  ui.cpp
src/nsc_qt/: assembler.cpp  dock_panels.cpp  examples.cpp  main.cpp  main_window.cpp  preferences_dialog.cpp  simulator_controller.cpp
src/nsc_qt/docs/: CodeEditor.md  DatapathWidget.md  MainWindow.md  MemoryWidget.md  PipelineTraceWidget.md  PreferencesDialog.md  RegisterWidget.md  SimulatorController.md  assembler.md  examples.md  index.md  main.md  ui_scale.md
src/nsc_qt/widgets/: code_editor.cpp  datapath_widget.cpp  memory_widget.cpp  pipeline_events_widget.cpp  pipeline_trace_widget.cpp  register_widget.cpp  schematic_datapath_widget.cpp
src/nsc_quick/: main.cpp  quick_simulator.cpp
tests/fuzz/: fuzz_hex_loader.cpp
tests/golden/: arith.asm  call.asm  compare.asm  fib.asm  golden_runner.cpp  logic.asm  memdata.asm  run_golden.py  shift.asm
tests/mips/: cp0_test.cpp  cpu_test.cpp  decoder_test.cpp  disasm_test.cpp  elf_loader_test.cpp  gdb_stub_test.cpp  nyxstone_test.cpp  processor_test.cpp
tests/nsc/: convert_test.cpp
tests/qt_ui/: qt_ui_test.cpp
video/: demo.webm
wiki/: Architecture.md  CP0-Exceptions.md  Contributing.md  ELF-Loader.md  GDB-Stub.md  Getting-Started.md  Home.md  MIPS-CPU-Emulator.md  Qt6-GUI.md  Roadmap.md  Terminal-UI.md  Windows-Code-Signing.md
